Bug 367072 - Copyright outdated
Summary: Copyright outdated
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-17 06:24 UTC by Bernhard Zürn
Modified: 2019-08-29 01:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments
Screenshot (56.25 KB, image/png)
2016-08-17 06:24 UTC, Bernhard Zürn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Zürn 2016-08-17 06:24:03 UTC
The Copyright information in the "About KMyMoney"-Dialog only lasts until 2014 (see attached screenshot)

Reproducible: Always

Steps to Reproduce:
1. Open KMymoney
2. Click "Help"
3. Click "About KmyMoney"
Comment 1 Bernhard Zürn 2016-08-17 06:24:33 UTC
Created attachment 100643 [details]
Screenshot
Comment 2 Thomas Baumgart 2016-08-18 14:06:25 UTC
Git commit 167eae14f2eee689ab6c21e823e1075aab55dc09 by Thomas Baumgart.
Committed on 18/08/2016 at 14:01.
Pushed by tbaumgart into branch '4.8'.

Adjusted year of copyright

M  +1    -1    kmymoney/main.cpp

http://commits.kde.org/kmymoney/167eae14f2eee689ab6c21e823e1075aab55dc09
Comment 3 Thomas Baumgart 2016-08-18 14:16:50 UTC
Git commit af6c6c7bf8f103a38b67c6244d3948c4c4e18424 by Thomas Baumgart.
Committed on 18/08/2016 at 14:14.
Pushed by tbaumgart into branch 'master'.

Adjusted year of copyright

M  +1    -1    kmymoney/main.cpp

http://commits.kde.org/kmymoney/af6c6c7bf8f103a38b67c6244d3948c4c4e18424