Adjusted year of copyright

BUG: 367072